--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hook-di",
-  "version": "0.0.4",
+  "name": "restful",
+  "version": "0.0.1",
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "vitest"
@@ -20,14 +20,6 @@
         "require": "./dist/index.cjs"
       },
       "import": "./dist/index.mjs"
-    },
-    "./vue": {
-      "browser": "./dist/vue.esm-browser.js",
-      "node": {
-        "import": "./dist/vue.mjs",
-        "require": "./dist/vue.cjs"
-      },
-      "import": "./dist/vue.mjs"
     }
   },
   "typesVersions": {
@@ -37,12 +29,10 @@
       ]
     }
   },
-  "repository": "https://github.com/cj97",
+  "repository": "https://github.com/jcc1997/restful",
   "keywords": [
     "typescript",
-    "hook",
-    "di",
-    "ioc"
+    "restful"
   ],
   "description": "hook style di implement",
   "devDependencies": {
@@ -52,8 +42,7 @@
     "rollup": "^2.70.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.3.0",
-    "vitest": "^0.9.2",
-    "vue": "^3.2.31"
+    "vitest": "^0.9.2"
   },
   "license": "MIT",
   "publishConfig": {
