--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restful",
+  "name": "typed-restful",
   "version": "0.0.1",
   "scripts": {
     "build": "rollup -c rollup.config.js",
